Fix header nav on mobile

--- a/client/src/app/header/header.component.scss
+++ b/client/src/app/header/header.component.scss
@@ -27,25 +27,26 @@ $anim-duration-timing-function: 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
     color: var(--app-header-home);
 
     @include app.media-breakpoint-down(sm) {
+      // On mobile, the app logo should be visible even when the nav is open.
       z-index: 99;
     }
+  }
 
-    &-logo {
-      font-size: 1.5em;
-    }
+  &__brand-logo {
+    font-size: 1.5em;
+  }
 
-    &-z {
-      background: linear-gradient(to right, #e5293b 20%, #be1e67 80%);
-      background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
+  &__brand-gradient {
+    background: linear-gradient(to right, #e5293b 20%, #be1e67 80%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 
   &__burger {
     z-index: 99;
   }
 
-  &__nav {
+  &__nav-inner {
     display: flex;
     align-items: center;
   }
@@ -68,22 +69,14 @@ $anim-duration-timing-function: 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
     }
 
     &__nav {
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: stretch;
-      gap: 2rem;
-
-      position: fixed;
-      z-index: 98;
-      overflow: auto;
-      box-sizing: border-box;
-      top: 0;
-      bottom: 0;
-      max-width: 100%;
-
       border-bottom: 5px solid var(--mat-sys-primary);
       background-color: var(--mat-sys-surface-container);
 
+      position: fixed;
+      z-index: 98;
+      top: 0;
+      bottom: 0;
+      max-width: 100%;
       width: 250px;
       right: -250px;
       box-shadow: 0 0 0px transparent;
@@ -103,31 +96,21 @@ $anim-duration-timing-function: 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
         box-shadow: var(--mat-sys-level4);
       }
 
-      &--content-hidden > * {
-        // This is the easiest way to prevent keyboard navigation on hidden elements.
-        display: none !important;
-      }
-    }
-
-    &__primary-nav {
-      padding-inline: 1.25rem;
-
       &::before {
-        content: ' ';
-        position: sticky;
-        top: 0;
-
-        margin-left: -1.25rem;
-        width: calc(100% + 2.5rem);
+        content: '';
+        position: absolute;
         height: $header-height;
-        flex-shrink: 0; // Important, otherwise the `height` will not be applied
+        top: 0;
+        left: 0;
+
+        // Important:
+        // This area must not cover the `.app-header__nav-inner` scrollbar.
+        // According to the resource below, the scrollbar's width varies between 12 and 17 pixels (depending on the browser).
+        //   - https://codepen.io/sambible/post/browser-scrollbar-widths
+        right: 18px;
 
         background-color: transparent;
         box-shadow: 0px 0px 0px var(--mat-sys-surface-container);
-
-        transition:
-          background-color $anim-duration-timing-function,
-          box-shadow $anim-duration-timing-function;
 
         @include app.media-breakpoint-down(sm) {
           z-index: 1;
@@ -136,6 +119,28 @@ $anim-duration-timing-function: 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
           box-shadow: 0px 10px 4px -4px var(--mat-sys-surface-container);
         }
       }
+    }
+
+    &__nav-inner {
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: stretch;
+      gap: 2rem;
+
+      box-sizing: border-box;
+      padding-top: $header-height;
+      height: 100%;
+      overflow: auto;
+      overscroll-behavior: contain;
+
+      &--hidden {
+        // This is the easiest way to prevent keyboard navigation on hidden elements.
+        display: none !important;
+      }
+    }
+
+    &__primary-nav {
+      padding-inline: 1.25rem;
     }
 
     &__nav-backdrop {
